pptx: Workaround for text colors inheritance before proper color scheme support.

There's a lot of slides where the text is not visible because text color equals
the background color.

* Ignore text colors set by slideMaster/slideLayout in case the color scheme
  changed in slideLayout/slide respectively.  Always use the color scheme defined
  by slideLayout when dealing with defaults because there's a better chance the
  text is going to be visible.

FIXME: Update fo:color in styles prepared while processing the p:txStyles
(Slide Master Text Styles) element when a color scheme override is detected.

BUG:286101