filters/libmsooxml/MsooXmlThemesReader.h
@@ -80,10 +80,13 @@ public:
     DrawingMLColorScheme();
     ~DrawingMLColorScheme();
 
-    DrawingMLColorSchemeItemBase* value(const QString& name) const { return DrawingMLColorSchemeItemHash::value(name); }
+    DrawingMLColorSchemeItemBase* value(const QString& name) const {
+        return DrawingMLColorSchemeItemHash::value(name);
+    }
 
-    /*! @return color value for index. Needed because while PPTX uses lookup by name: value(QString&),
-                XLSX uses lookup by index. When index is invalid, 0 is returned. */
+    /*! @return color value for index. Needed because while PPTX uses lookup by
+        name: value(QString&), XLSX uses lookup by index. When index is
+        invalid, 0 is returned. */
     DrawingMLColorSchemeItemBase* value(int index) const;
 
     DrawingMLColorScheme(const DrawingMLColorScheme& scheme);
@@ -241,11 +244,13 @@ protected:
     KoFilter::ConversionStatus read_extLst();
     KoFilter::ConversionStatus read_extraClrSchemeLst();
     KoFilter::ConversionStatus read_extraClrScheme();
+
     KoFilter::ConversionStatus read_clrScheme();
     KoFilter::ConversionStatus read_color(); //!< helper
     KoFilter::ConversionStatus read_srgbClr();
     KoFilter::ConversionStatus read_sysClr();
     DrawingMLColorSchemeItemBase* m_currentColor; //!< used by *Clr()
+
     KoFilter::ConversionStatus read_fmtScheme();
     KoFilter::ConversionStatus read_fontScheme();
     KoFilter::ConversionStatus read_clrMap();
